<resources>
    <string name="app_name">Family Safety</string>
    <string name="sos">SOS</string>
    <string name="sos_text_msg">In case of emergency, keep telling family members to contact me.</string>
    <string name="guard">GUARD</string>
    <string name="guard_text_msg">Open when you are a potentially dangerous journy.</string>
    <string name="security">Security</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>