<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimens8dp"
    android:background="@color/color_gray_bg">


    <!-- Security Text -->
    <TextView
        android:id="@+id/security_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textSize="@dimen/dimen25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="@dimen/dimens16dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <!-->SOS (Pink Card)-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens180dp"
        android:layout_margin="@dimen/dimens16dp"
        app:cardBackgroundColor="#f0737b"
        app:cardCornerRadius="@dimen/dimens16dp"
        app:layout_constraintTop_toBottomOf="@id/security_text"
        app:cardElevation="@dimen/dimens16dp"/>


    <!--SOS Text-->
    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textSize="@dimen/dimens24sp"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="16dp"
        />


    <!--SOS Description Text-->
    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sos_text_msg"
        android:textSize="@dimen/dimens16sp"
        android:textStyle="italic"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="@dimen/dimens16dp"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_img" />

    <!--SOS Image-->
    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_sos"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="@dimen/dimens16dp"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"/>





    <!--Guard (Green Card)-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens180dp"
        android:layout_margin="@dimen/dimens16dp"
        app:cardBackgroundColor="@color/color_green"
        app:cardCornerRadius="@dimen/dimens16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        app:cardElevation="@dimen/dimens16dp"/>


    <!--Guard Text-->
    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:textSize="@dimen/dimens24sp"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="@dimen/dimens16dp" />


    <!--Guard Description Text-->
    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        android:text="@string/guard_text_msg"
        android:textSize="@dimen/dimens16sp"
        android:textStyle="italic"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="@dimen/dimens16dp"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_img" />


    <!--GUARD Image-->
    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimens96dp"
        android:layout_height="@dimen/dimens96dp"
        android:src="@drawable/ic_guard"
        android:elevation="@dimen/dimens16dp"
        android:layout_margin="@dimen/dimens16dp"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card" />









</androidx.constraintlayout.widget.ConstraintLayout>